tdf#74885 Fix direction in CMIS property editor scrollbar

Use outer container size to compute scroll max range.
Remove class member function no longer used.
Remove class field no longer used.
Rename some local variables.

Change-Id: Ida2f631ce7a49b2ce4cd4ee2913437b020058ae1